[gd_scene load_steps=6 format=2]

[ext_resource path="res://GameHUDRelated/LeftSidePanel/SynergyInfoPanel/Pics/Syn_Dom_Violet.png" type="Texture" id=1]
[ext_resource path="res://GameHUDRelated/LeftSidePanel/SynergyInfoPanel/Pics/Tier_Diamond.png" type="Texture" id=2]
[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://GameHUDRelated/SynergyIconPanel/SynergyIconPanel.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 18
font_data = ExtResource( 3 )

[node name="SynergyIconPanel" type="MarginContainer"]
margin_right = 56.0
margin_bottom = 28.0
rect_min_size = Vector2( 56, 28 )
script = ExtResource( 4 )

[node name="Control" type="Control" parent="."]
margin_right = 56.0
margin_bottom = 28.0

[node name="SynIconContainer" type="Control" parent="Control"]
margin_left = 28.0
margin_right = 56.0
margin_bottom = 28.0
mouse_filter = 2

[node name="SynIcon" type="TextureRect" parent="Control/SynIconContainer"]
margin_right = 14.0
margin_bottom = 14.0
rect_scale = Vector2( 2, 2 )
mouse_filter = 2
texture = ExtResource( 1 )

[node name="TierContainer" type="Control" parent="Control"]
margin_right = 28.0
margin_bottom = 28.0
mouse_filter = 2

[node name="TierIcon" type="TextureRect" parent="Control/TierContainer"]
margin_right = 14.0
margin_bottom = 14.0
rect_scale = Vector2( 2, 2 )
mouse_filter = 2
texture = ExtResource( 2 )

[node name="TierLabel" type="Label" parent="Control/TierContainer"]
margin_top = 5.0
margin_right = 28.0
margin_bottom = 24.0
rect_min_size = Vector2( 28, 19 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
align = 1
